--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,9 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "Using":  [ "Serilog.Sinks.Console"],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      { "Name": "Console" }
+    ]
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
