--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=EventManagement;Username=postgres;Password=db_learn"
+  },
+  "Authentication" : {
+    "SecretKey" : "this is my custom Secret key for authentication"
   }
 }
