--- a/.github/workflows/dotnet_build_and_test.yml
+++ b/.github/workflows/dotnet_build_and_test.yml
@@ -5,9 +5,13 @@ name: .NET
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - "main"
+      - "dev-improvements"
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - "main"
+      - "dev-improvements"
 
 jobs:
   build:
