--- a/Tests/IntegrationTests/IntegrationTests.csproj
+++ b/Tests/IntegrationTests/IntegrationTests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Faker.Net" Version="2.0.163" />
     <PackageReference Include="FluentAssertions" Version="7.0.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
